[project]
name = "tiny-llm-proxy"
version = "0.1.0"
description = "A very small, single-purpose OpenAI-compatible proxy server with high-fidelity local conversation logging in OpenAI message format (JSONL)."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AlexHT Hung"}
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.1",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.scripts]
tiny-llm-proxy = "tiny_llm_proxy.main:main"

[project.urls]
Homepage = "https://github.com/alex-ht/tiny-llm-proxy"
Repository = "https://github.com/alex-ht/tiny-llm-proxy.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length is handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-q --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.2.0",
]
